k8s/grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: provisioning-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: provisioning-dashboards
              mountPath: /etc/grafana/provisioning/dashboards
            - name: dashboards
              mountPath: /etc/grafana/dashboards
      volumes:
        - name: provisioning-datasources
          configMap:
            name: grafana-provisioning
            items:
              - key: datasource.yaml
                path: datasource.yaml
        - name: provisioning-dashboards
          configMap:
            name: grafana-provisioning
            items:
              - key: dashboard-provider.yaml
                path: dashboard-provider.yaml
        - name: dashboards
          configMap:
            name: grafana-dashboards
